--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,6 +47,35 @@
                     android:textSize="24sp"
                     android:textColor="@color/bluegray_700"
                     android:textStyle="bold" />
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/profile_user_name"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="10dp">
+                    <ImageView
+                        android:id="@+id/imageStar1"
+                        android:layout_height="20dp"
+                        android:layout_width="20dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/img_star"
+                        tools:ignore="ContentDescription" />
+                    <TextView
+                        android:id="@+id/tvRatingCount"
+                        android:ellipsize="end"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_width="wrap_content"
+                        android:singleLine="true"
+                        android:text="@{@string/rating(Double.toString(viewModel.eatery.average_rating_count))}"
+                        tools:text="5.0"
+                        android:textColor="@color/bluegray_700"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/avenir_next_lt_pro"
+                        android:textStyle="bold"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
